front app e-commerce

--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "e-commerce-frontend:build:production"
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "73f620a8-05e4-492f-b216-4f139a5f3f3f"
   }
 }
